thrasyboulos/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-test
  namespace: apologia  # The namespace you're trying to connect from
spec:
  containers:
    - name: network-test
      image: nicolaka/netshoot
      command: ["sleep", "3600"]
